@@ -5,9 +5,8 @@
 package com.jyuzawa.onnxruntime;
 
 import com.jyuzawa.onnxruntime_extern.OrtROCMProviderOptions;
-import java.lang.foreign.MemoryAddress;
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
 import java.util.Map;
 
 final class ExecutionProviderROCMConfig extends ExecutionProviderConfig {
@@ -17,22 +16,20 @@ final class ExecutionProviderROCMConfig extends ExecutionProviderConfig {
     }
 
     @Override
-    final void appendToSessionOptions(MemorySession memorySession, ApiImpl api, MemoryAddress sessionOptions) {
+    final void appendToSessionOptions(Arena memorySession, ApiImpl api, MemorySegment sessionOptions) {
         MemorySegment config = OrtROCMProviderOptions.allocate(memorySession);
-        copyInteger("device_id", config, OrtROCMProviderOptions::device_id$set);
-        copyInteger("miopen_conv_exhaustive_search", config, OrtROCMProviderOptions::miopen_conv_exhaustive_search$set);
-        copyLong("gpu_mem_limit", config, OrtROCMProviderOptions::gpu_mem_limit$set);
-        copyInteger("arena_extend_strategy", config, OrtROCMProviderOptions::arena_extend_strategy$set);
-        copyInteger("do_copy_in_default_stream", config, OrtROCMProviderOptions::do_copy_in_default_stream$set);
-        copyInteger("has_user_compute_stream", config, OrtROCMProviderOptions::has_user_compute_stream$set);
+        copyInteger("device_id", config, OrtROCMProviderOptions::device_id);
+        copyInteger("miopen_conv_exhaustive_search", config, OrtROCMProviderOptions::miopen_conv_exhaustive_search);
+        copyLong("gpu_mem_limit", config, OrtROCMProviderOptions::gpu_mem_limit);
+        copyInteger("arena_extend_strategy", config, OrtROCMProviderOptions::arena_extend_strategy);
+        copyInteger("do_copy_in_default_stream", config, OrtROCMProviderOptions::do_copy_in_default_stream);
+        copyInteger("has_user_compute_stream", config, OrtROCMProviderOptions::has_user_compute_stream);
         // TODO: user_compute_stream
         // TODO: default_memory_arena_cfg
-        copyInteger("tunable_op_enable", config, OrtROCMProviderOptions::tunable_op_enable$set);
-        copyInteger("tunable_op_tuning_enable", config, OrtROCMProviderOptions::tunable_op_tuning_enable$set);
+        copyInteger("tunable_op_enable", config, OrtROCMProviderOptions::tunable_op_enable);
+        copyInteger("tunable_op_tuning_enable", config, OrtROCMProviderOptions::tunable_op_tuning_enable);
         copyInteger(
-                "tunable_op_max_tuning_duration_ms",
-                config,
-                OrtROCMProviderOptions::tunable_op_max_tuning_duration_ms$set);
-        api.checkStatus(api.SessionOptionsAppendExecutionProvider_ROCM.apply(sessionOptions, config.address()));
+                "tunable_op_max_tuning_duration_ms", config, OrtROCMProviderOptions::tunable_op_max_tuning_duration_ms);
+        api.checkStatus(api.SessionOptionsAppendExecutionProvider_ROCM.apply(sessionOptions, config));
     }
 }
