@@ -6,12 +6,12 @@ package com.jyuzawa.onnxruntime;
 
 import static com.jyuzawa.onnxruntime_extern.onnxruntime_all_h.C_POINTER;
 
-import java.lang.foreign.MemoryAddress;
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
 import java.lang.foreign.SegmentAllocator;
 import java.util.ArrayList;
 import java.util.LinkedHashMap;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 
@@ -19,7 +19,7 @@ final class TransactionImpl implements Transaction {
     // private final Object cancelLock;
     // private MemoryAddress runOptions;
 
-    private final MemorySession memorySession;
+    private final Arena memorySession;
     private final SegmentAllocator allocator;
     private final Builder builder;
     private final List<InputTuple> inputs;
@@ -27,8 +27,8 @@ final class TransactionImpl implements Transaction {
     private final ValueContext valueContext;
 
     TransactionImpl(Builder builder) {
-        this.memorySession = MemorySession.openConfined();
-        this.allocator = SegmentAllocator.newNativeArena(memorySession);
+        this.memorySession = Arena.ofConfined();
+        this.allocator = memorySession;
         this.builder = builder;
         this.inputs = new ArrayList<>(builder.session.inputs.size());
         this.outputs = new ArrayList<>(builder.session.outputs.size());
@@ -37,12 +37,16 @@ final class TransactionImpl implements Transaction {
                 allocator,
                 memorySession,
                 builder.session.environment.ortAllocator,
-                builder.session.environment.memoryInfo);
+                builder.session.environment.memoryInfo,
+                new LinkedList<>());
         // this.cancelLock = new Object();
     }
 
     @Override
     public void close() {
+        for (Runnable closeables : valueContext.closeables()) {
+            closeables.run();
+        }
         memorySession.close();
     }
 
@@ -94,15 +98,15 @@ final class TransactionImpl implements Transaction {
         SessionImpl sessionImpl = builder.session;
         int numInputs = inputs.size();
         int numOutputs = outputs.size();
-        MemorySegment inputNames = allocator.allocateArray(C_POINTER, numInputs);
-        MemorySegment inputValues = allocator.allocateArray(C_POINTER, numInputs);
-        MemorySegment outputNames = allocator.allocateArray(C_POINTER, numOutputs);
-        MemorySegment outputValues = allocator.allocateArray(C_POINTER, numOutputs);
+        MemorySegment inputNames = allocator.allocate(C_POINTER, numInputs);
+        MemorySegment inputValues = allocator.allocate(C_POINTER, numInputs);
+        MemorySegment outputNames = allocator.allocate(C_POINTER, numOutputs);
+        MemorySegment outputValues = allocator.allocate(C_POINTER, numOutputs);
         for (int i = 0; i < numInputs; i++) {
             InputTuple inputTuple = inputs.get(i);
             inputNames.setAtIndex(C_POINTER, i, inputTuple.nodeInfo().nameSegment);
-            MemoryAddress valueAddress = inputTuple.value().toNative();
-            memorySession.addCloseAction(() -> api.ReleaseValue.apply(valueAddress));
+            MemorySegment valueAddress = inputTuple.value().toNative();
+            valueContext.closeables().add(() -> api.ReleaseValue.apply(valueAddress));
             inputValues.setAtIndex(C_POINTER, i, valueAddress);
         }
 
@@ -110,7 +114,7 @@ final class TransactionImpl implements Transaction {
             outputNames.setAtIndex(C_POINTER, i, outputs.get(i).nameSegment);
         }
 
-        MemoryAddress runOptionsAddress = builder.newRunOptions(allocator);
+        MemorySegment runOptionsAddress = builder.newRunOptions(allocator);
         // synchronized (cancelLock) {
         // this.runOptions = runOptionsAddress;
         // }
@@ -118,12 +122,12 @@ final class TransactionImpl implements Transaction {
             api.checkStatus(api.Run.apply(
                     sessionImpl.address(),
                     runOptionsAddress,
-                    inputNames.address(),
-                    inputValues.address(),
+                    inputNames,
+                    inputValues,
                     numInputs,
-                    outputNames.address(),
+                    outputNames,
                     numOutputs,
-                    outputValues.address()));
+                    outputValues));
         } finally {
             // synchronized (cancelLock) {
             api.ReleaseRunOptions.apply(runOptionsAddress);
@@ -132,11 +136,11 @@ final class TransactionImpl implements Transaction {
         }
         LinkedHashMap<String, OnnxValue> out = new LinkedHashMap<>(outputs.size());
         for (int i = 0; i < outputs.size(); i++) {
-            MemoryAddress outputAddress = outputValues.getAtIndex(C_POINTER, i);
+            MemorySegment outputAddress = outputValues.getAtIndex(C_POINTER, i);
             // TODO: get typeinfo from result
             NodeInfoImpl nodeInfo = outputs.get(i);
             OnnxValueImpl outputValue = nodeInfo.getTypeInfo().newValue(valueContext, outputAddress);
-            memorySession.addCloseAction(() -> api.ReleaseValue.apply(outputAddress));
+            valueContext.closeables().add(() -> api.ReleaseValue.apply(outputAddress));
             out.put(nodeInfo.getName(), outputValue);
         }
 
@@ -186,8 +190,8 @@ final class TransactionImpl implements Transaction {
             return this;
         }
 
-        private MemoryAddress newRunOptions(SegmentAllocator scope) {
-            MemoryAddress runOptions = api.create(scope, out -> api.CreateRunOptions.apply(out));
+        private MemorySegment newRunOptions(SegmentAllocator scope) {
+            MemorySegment runOptions = api.create(scope, out -> api.CreateRunOptions.apply(out));
             if (logSeverityLevel != null) {
                 api.checkStatus(api.RunOptionsSetRunLogSeverityLevel.apply(runOptions, logSeverityLevel.getNumber()));
             }
@@ -195,15 +199,12 @@ final class TransactionImpl implements Transaction {
                 api.checkStatus(api.RunOptionsSetRunLogVerbosityLevel.apply(runOptions, logVerbosityLevel));
             }
             if (runTag != null) {
-                api.checkStatus(api.RunOptionsSetRunTag.apply(
-                        runOptions, scope.allocateUtf8String(runTag).address()));
+                api.checkStatus(api.RunOptionsSetRunTag.apply(runOptions, scope.allocateFrom(runTag)));
             }
             if (config != null && !config.isEmpty()) {
                 for (Map.Entry<String, String> entry : config.entrySet()) {
                     api.checkStatus(api.AddRunConfigEntry.apply(
-                            runOptions,
-                            scope.allocateUtf8String(entry.getKey()).address(),
-                            scope.allocateUtf8String(entry.getValue()).address()));
+                            runOptions, scope.allocateFrom(entry.getKey()), scope.allocateFrom(entry.getValue())));
                 }
             }
             return runOptions;
