@@ -4,217 +4,473 @@
  */
 package com.jyuzawa.onnxruntime_extern;
 
+import static java.lang.foreign.MemoryLayout.PathElement.*;
 import static java.lang.foreign.ValueLayout.*;
 
 import java.lang.foreign.*;
-import java.lang.invoke.MethodHandle;
-import java.lang.invoke.VarHandle;
+import java.lang.invoke.*;
+import java.util.*;
+import java.util.function.*;
+import java.util.stream.*;
 
+/**
+ * {@snippet lang=c :
+ * struct OrtAllocator {
+ *     uint32_t version;
+ *     void *(*Alloc)(struct OrtAllocator *, size_t);
+ *     void (*Free)(struct OrtAllocator *, void *);
+ *     const struct OrtMemoryInfo *(*Info)(const struct OrtAllocator *);
+ * }
+ * }
+ */
 public class OrtAllocator {
 
-    static final GroupLayout $struct$LAYOUT = MemoryLayout.structLayout(
-                    Constants$root.C_INT$LAYOUT.withName("version"),
-                    MemoryLayout.paddingLayout(32),
-                    Constants$root.C_POINTER$LAYOUT.withName("Alloc"),
-                    Constants$root.C_POINTER$LAYOUT.withName("Free"),
-                    Constants$root.C_POINTER$LAYOUT.withName("Info"))
+    OrtAllocator() {
+        // Should not be called directly
+    }
+
+    private static final GroupLayout $LAYOUT = MemoryLayout.structLayout(
+                    onnxruntime_all_h.C_INT.withName("version"),
+                    MemoryLayout.paddingLayout(4),
+                    onnxruntime_all_h.C_POINTER.withName("Alloc"),
+                    onnxruntime_all_h.C_POINTER.withName("Free"),
+                    onnxruntime_all_h.C_POINTER.withName("Info"))
             .withName("OrtAllocator");
 
-    public static MemoryLayout $LAYOUT() {
-        return OrtAllocator.$struct$LAYOUT;
+    /**
+     * The layout of this struct
+     */
+    public static final GroupLayout layout() {
+        return $LAYOUT;
     }
 
-    static final VarHandle version$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("version"));
+    private static final OfInt version$LAYOUT = (OfInt) $LAYOUT.select(groupElement("version"));
 
-    public static VarHandle version$VH() {
-        return OrtAllocator.version$VH;
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * uint32_t version
+     * }
+     */
+    public static final OfInt version$layout() {
+        return version$LAYOUT;
     }
 
-    public static int version$get(MemorySegment seg) {
-        return (int) OrtAllocator.version$VH.get(seg);
+    private static final long version$OFFSET = 0;
+
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * uint32_t version
+     * }
+     */
+    public static final long version$offset() {
+        return version$OFFSET;
     }
 
-    public static void version$set(MemorySegment seg, int x) {
-        OrtAllocator.version$VH.set(seg, x);
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * uint32_t version
+     * }
+     */
+    public static int version(MemorySegment struct) {
+        return struct.get(version$LAYOUT, version$OFFSET);
     }
 
-    public static int version$get(MemorySegment seg, long index) {
-        return (int) OrtAllocator.version$VH.get(seg.asSlice(index * sizeof()));
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * uint32_t version
+     * }
+     */
+    public static void version(MemorySegment struct, int fieldValue) {
+        struct.set(version$LAYOUT, version$OFFSET, fieldValue);
     }
 
-    public static void version$set(MemorySegment seg, long index, int x) {
-        OrtAllocator.version$VH.set(seg.asSlice(index * sizeof()), x);
-    }
+    /**
+     * {@snippet lang=c :
+     * void *(*Alloc)(struct OrtAllocator *, size_t)
+     * }
+     */
+    public static class Alloc {
 
-    static final FunctionDescriptor Alloc$FUNC = FunctionDescriptor.of(
-            Constants$root.C_POINTER$LAYOUT, Constants$root.C_POINTER$LAYOUT, Constants$root.C_LONG_LONG$LAYOUT);
-    static final MethodHandle Alloc$MH = RuntimeHelper.downcallHandle(OrtAllocator.Alloc$FUNC);
-
-    public interface Alloc {
-
-        java.lang.foreign.Addressable apply(java.lang.foreign.MemoryAddress _x0, long _x1);
-
-        static MemorySegment allocate(Alloc fi, MemorySession session) {
-            return RuntimeHelper.upcallStub(Alloc.class, fi, OrtAllocator.Alloc$FUNC, session);
+        Alloc() {
+            // Should not be called directly
         }
 
-        static Alloc ofAddress(MemoryAddress addr, MemorySession session) {
-            MemorySegment symbol = MemorySegment.ofAddress(addr, 0, session);
-            return (java.lang.foreign.MemoryAddress __x0, long __x1) -> {
-                try {
-                    return (java.lang.foreign.Addressable)
-                            (java.lang.foreign.MemoryAddress) OrtAllocator.Alloc$MH.invokeExact(
-                                    (Addressable) symbol, (java.lang.foreign.Addressable) __x0, __x1);
-                } catch (Throwable ex$) {
-                    throw new AssertionError("should not reach here", ex$);
-                }
-            };
-        }
-    }
-
-    static final VarHandle Alloc$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("Alloc"));
-
-    public static VarHandle Alloc$VH() {
-        return OrtAllocator.Alloc$VH;
-    }
-
-    public static MemoryAddress Alloc$get(MemorySegment seg) {
-        return (java.lang.foreign.MemoryAddress) OrtAllocator.Alloc$VH.get(seg);
-    }
-
-    public static void Alloc$set(MemorySegment seg, MemoryAddress x) {
-        OrtAllocator.Alloc$VH.set(seg, x);
-    }
-
-    public static MemoryAddress Alloc$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemoryAddress) OrtAllocator.Alloc$VH.get(seg.asSlice(index * sizeof()));
-    }
-
-    public static void Alloc$set(MemorySegment seg, long index, MemoryAddress x) {
-        OrtAllocator.Alloc$VH.set(seg.asSlice(index * sizeof()), x);
-    }
-
-    public static Alloc Alloc(MemorySegment segment, MemorySession session) {
-        return Alloc.ofAddress(Alloc$get(segment), session);
-    }
-
-    static final FunctionDescriptor Free$FUNC =
-            FunctionDescriptor.ofVoid(Constants$root.C_POINTER$LAYOUT, Constants$root.C_POINTER$LAYOUT);
-    static final MethodHandle Free$MH = RuntimeHelper.downcallHandle(OrtAllocator.Free$FUNC);
-
-    public interface Free {
-
-        void apply(java.lang.foreign.MemoryAddress _x0, java.lang.foreign.MemoryAddress _x1);
-
-        static MemorySegment allocate(Free fi, MemorySession session) {
-            return RuntimeHelper.upcallStub(Free.class, fi, OrtAllocator.Free$FUNC, session);
+        /**
+         * The function pointer signature, expressed as a functional interface
+         */
+        public interface Function {
+            MemorySegment apply(MemorySegment _x0, long _x1);
         }
 
-        static Free ofAddress(MemoryAddress addr, MemorySession session) {
-            MemorySegment symbol = MemorySegment.ofAddress(addr, 0, session);
-            return (java.lang.foreign.MemoryAddress __x0, java.lang.foreign.MemoryAddress __x1) -> {
-                try {
-                    OrtAllocator.Free$MH.invokeExact(
-                            (Addressable) symbol, (java.lang.foreign.Addressable) __x0, (java.lang.foreign.Addressable)
-                                    __x1);
-                } catch (Throwable ex$) {
-                    throw new AssertionError("should not reach here", ex$);
-                }
-            };
-        }
-    }
+        private static final FunctionDescriptor $DESC = FunctionDescriptor.of(
+                onnxruntime_all_h.C_POINTER, onnxruntime_all_h.C_POINTER, onnxruntime_all_h.C_LONG);
 
-    static final VarHandle Free$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("Free"));
-
-    public static VarHandle Free$VH() {
-        return OrtAllocator.Free$VH;
-    }
-
-    public static MemoryAddress Free$get(MemorySegment seg) {
-        return (java.lang.foreign.MemoryAddress) OrtAllocator.Free$VH.get(seg);
-    }
-
-    public static void Free$set(MemorySegment seg, MemoryAddress x) {
-        OrtAllocator.Free$VH.set(seg, x);
-    }
-
-    public static MemoryAddress Free$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemoryAddress) OrtAllocator.Free$VH.get(seg.asSlice(index * sizeof()));
-    }
-
-    public static void Free$set(MemorySegment seg, long index, MemoryAddress x) {
-        OrtAllocator.Free$VH.set(seg.asSlice(index * sizeof()), x);
-    }
-
-    public static Free Free(MemorySegment segment, MemorySession session) {
-        return Free.ofAddress(Free$get(segment), session);
-    }
-
-    static final FunctionDescriptor Info$FUNC =
-            FunctionDescriptor.of(Constants$root.C_POINTER$LAYOUT, Constants$root.C_POINTER$LAYOUT);
-    static final MethodHandle Info$MH = RuntimeHelper.downcallHandle(OrtAllocator.Info$FUNC);
-
-    public interface Info {
-
-        java.lang.foreign.Addressable apply(java.lang.foreign.MemoryAddress _x0);
-
-        static MemorySegment allocate(Info fi, MemorySession session) {
-            return RuntimeHelper.upcallStub(Info.class, fi, OrtAllocator.Info$FUNC, session);
+        /**
+         * The descriptor of this function pointer
+         */
+        public static FunctionDescriptor descriptor() {
+            return $DESC;
         }
 
-        static Info ofAddress(MemoryAddress addr, MemorySession session) {
-            MemorySegment symbol = MemorySegment.ofAddress(addr, 0, session);
-            return (java.lang.foreign.MemoryAddress __x0) -> {
-                try {
-                    return (java.lang.foreign.Addressable)
-                            (java.lang.foreign.MemoryAddress) OrtAllocator.Info$MH.invokeExact(
-                                    (Addressable) symbol, (java.lang.foreign.Addressable) __x0);
-                } catch (Throwable ex$) {
-                    throw new AssertionError("should not reach here", ex$);
-                }
-            };
+        private static final MethodHandle UP$MH = onnxruntime_all_h.upcallHandle(Alloc.Function.class, "apply", $DESC);
+
+        /**
+         * Allocates a new upcall stub, whose implementation is defined by {@code fi}.
+         * The lifetime of the returned segment is managed by {@code arena}
+         */
+        public static MemorySegment allocate(Alloc.Function fi, Arena arena) {
+            return Linker.nativeLinker().upcallStub(UP$MH.bindTo(fi), $DESC, arena);
+        }
+
+        private static final MethodHandle DOWN$MH = Linker.nativeLinker().downcallHandle($DESC);
+
+        /**
+         * Invoke the upcall stub {@code funcPtr}, with given parameters
+         */
+        public static MemorySegment invoke(MemorySegment funcPtr, MemorySegment _x0, long _x1) {
+            try {
+                return (MemorySegment) DOWN$MH.invokeExact(funcPtr, _x0, _x1);
+            } catch (Throwable ex$) {
+                throw new AssertionError("should not reach here", ex$);
+            }
+        }
+
+        /**
+         * Get an implementation of the function interface from a function pointer.
+         */
+        public static Alloc.Function function(MemorySegment funcPtr) {
+            return (_x0, _x1) -> invoke(funcPtr, _x0, _x1);
         }
     }
 
-    static final VarHandle Info$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("Info"));
+    private static final AddressLayout Alloc$LAYOUT = (AddressLayout) $LAYOUT.select(groupElement("Alloc"));
 
-    public static VarHandle Info$VH() {
-        return OrtAllocator.Info$VH;
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * void *(*Alloc)(struct OrtAllocator *, size_t)
+     * }
+     */
+    public static final AddressLayout Alloc$layout() {
+        return Alloc$LAYOUT;
     }
 
-    public static MemoryAddress Info$get(MemorySegment seg) {
-        return (java.lang.foreign.MemoryAddress) OrtAllocator.Info$VH.get(seg);
+    private static final long Alloc$OFFSET = 8;
+
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * void *(*Alloc)(struct OrtAllocator *, size_t)
+     * }
+     */
+    public static final long Alloc$offset() {
+        return Alloc$OFFSET;
     }
 
-    public static void Info$set(MemorySegment seg, MemoryAddress x) {
-        OrtAllocator.Info$VH.set(seg, x);
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * void *(*Alloc)(struct OrtAllocator *, size_t)
+     * }
+     */
+    public static MemorySegment Alloc(MemorySegment struct) {
+        return struct.get(Alloc$LAYOUT, Alloc$OFFSET);
     }
 
-    public static MemoryAddress Info$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemoryAddress) OrtAllocator.Info$VH.get(seg.asSlice(index * sizeof()));
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * void *(*Alloc)(struct OrtAllocator *, size_t)
+     * }
+     */
+    public static void Alloc(MemorySegment struct, MemorySegment fieldValue) {
+        struct.set(Alloc$LAYOUT, Alloc$OFFSET, fieldValue);
     }
 
-    public static void Info$set(MemorySegment seg, long index, MemoryAddress x) {
-        OrtAllocator.Info$VH.set(seg.asSlice(index * sizeof()), x);
+    /**
+     * Functional interface getter for field:
+     * {@snippet lang=c :
+     * void *(*Alloc)(struct OrtAllocator *, size_t)
+     * }
+     */
+    public static Alloc.Function AllocFunction(MemorySegment struct) {
+        return Alloc.function(Alloc(struct));
     }
 
-    public static Info Info(MemorySegment segment, MemorySession session) {
-        return Info.ofAddress(Info$get(segment), session);
+    /**
+     * {@snippet lang=c :
+     * void (*Free)(struct OrtAllocator *, void *)
+     * }
+     */
+    public static class Free {
+
+        Free() {
+            // Should not be called directly
+        }
+
+        /**
+         * The function pointer signature, expressed as a functional interface
+         */
+        public interface Function {
+            void apply(MemorySegment _x0, MemorySegment _x1);
+        }
+
+        private static final FunctionDescriptor $DESC =
+                FunctionDescriptor.ofVoid(onnxruntime_all_h.C_POINTER, onnxruntime_all_h.C_POINTER);
+
+        /**
+         * The descriptor of this function pointer
+         */
+        public static FunctionDescriptor descriptor() {
+            return $DESC;
+        }
+
+        private static final MethodHandle UP$MH = onnxruntime_all_h.upcallHandle(Free.Function.class, "apply", $DESC);
+
+        /**
+         * Allocates a new upcall stub, whose implementation is defined by {@code fi}.
+         * The lifetime of the returned segment is managed by {@code arena}
+         */
+        public static MemorySegment allocate(Free.Function fi, Arena arena) {
+            return Linker.nativeLinker().upcallStub(UP$MH.bindTo(fi), $DESC, arena);
+        }
+
+        private static final MethodHandle DOWN$MH = Linker.nativeLinker().downcallHandle($DESC);
+
+        /**
+         * Invoke the upcall stub {@code funcPtr}, with given parameters
+         */
+        public static void invoke(MemorySegment funcPtr, MemorySegment _x0, MemorySegment _x1) {
+            try {
+                DOWN$MH.invokeExact(funcPtr, _x0, _x1);
+            } catch (Throwable ex$) {
+                throw new AssertionError("should not reach here", ex$);
+            }
+        }
+
+        /**
+         * Get an implementation of the function interface from a function pointer.
+         */
+        public static Free.Function function(MemorySegment funcPtr) {
+            return (_x0, _x1) -> invoke(funcPtr, _x0, _x1);
+        }
     }
 
+    private static final AddressLayout Free$LAYOUT = (AddressLayout) $LAYOUT.select(groupElement("Free"));
+
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * void (*Free)(struct OrtAllocator *, void *)
+     * }
+     */
+    public static final AddressLayout Free$layout() {
+        return Free$LAYOUT;
+    }
+
+    private static final long Free$OFFSET = 16;
+
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * void (*Free)(struct OrtAllocator *, void *)
+     * }
+     */
+    public static final long Free$offset() {
+        return Free$OFFSET;
+    }
+
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * void (*Free)(struct OrtAllocator *, void *)
+     * }
+     */
+    public static MemorySegment Free(MemorySegment struct) {
+        return struct.get(Free$LAYOUT, Free$OFFSET);
+    }
+
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * void (*Free)(struct OrtAllocator *, void *)
+     * }
+     */
+    public static void Free(MemorySegment struct, MemorySegment fieldValue) {
+        struct.set(Free$LAYOUT, Free$OFFSET, fieldValue);
+    }
+
+    /**
+     * Functional interface getter for field:
+     * {@snippet lang=c :
+     * void (*Free)(struct OrtAllocator *, void *)
+     * }
+     */
+    public static Free.Function FreeFunction(MemorySegment struct) {
+        return Free.function(Free(struct));
+    }
+
+    /**
+     * {@snippet lang=c :
+     * const struct OrtMemoryInfo *(*Info)(const struct OrtAllocator *)
+     * }
+     */
+    public static class Info {
+
+        Info() {
+            // Should not be called directly
+        }
+
+        /**
+         * The function pointer signature, expressed as a functional interface
+         */
+        public interface Function {
+            MemorySegment apply(MemorySegment _x0);
+        }
+
+        private static final FunctionDescriptor $DESC =
+                FunctionDescriptor.of(onnxruntime_all_h.C_POINTER, onnxruntime_all_h.C_POINTER);
+
+        /**
+         * The descriptor of this function pointer
+         */
+        public static FunctionDescriptor descriptor() {
+            return $DESC;
+        }
+
+        private static final MethodHandle UP$MH = onnxruntime_all_h.upcallHandle(Info.Function.class, "apply", $DESC);
+
+        /**
+         * Allocates a new upcall stub, whose implementation is defined by {@code fi}.
+         * The lifetime of the returned segment is managed by {@code arena}
+         */
+        public static MemorySegment allocate(Info.Function fi, Arena arena) {
+            return Linker.nativeLinker().upcallStub(UP$MH.bindTo(fi), $DESC, arena);
+        }
+
+        private static final MethodHandle DOWN$MH = Linker.nativeLinker().downcallHandle($DESC);
+
+        /**
+         * Invoke the upcall stub {@code funcPtr}, with given parameters
+         */
+        public static MemorySegment invoke(MemorySegment funcPtr, MemorySegment _x0) {
+            try {
+                return (MemorySegment) DOWN$MH.invokeExact(funcPtr, _x0);
+            } catch (Throwable ex$) {
+                throw new AssertionError("should not reach here", ex$);
+            }
+        }
+
+        /**
+         * Get an implementation of the function interface from a function pointer.
+         */
+        public static Info.Function function(MemorySegment funcPtr) {
+            return (_x0) -> invoke(funcPtr, _x0);
+        }
+    }
+
+    private static final AddressLayout Info$LAYOUT = (AddressLayout) $LAYOUT.select(groupElement("Info"));
+
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * const struct OrtMemoryInfo *(*Info)(const struct OrtAllocator *)
+     * }
+     */
+    public static final AddressLayout Info$layout() {
+        return Info$LAYOUT;
+    }
+
+    private static final long Info$OFFSET = 24;
+
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * const struct OrtMemoryInfo *(*Info)(const struct OrtAllocator *)
+     * }
+     */
+    public static final long Info$offset() {
+        return Info$OFFSET;
+    }
+
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * const struct OrtMemoryInfo *(*Info)(const struct OrtAllocator *)
+     * }
+     */
+    public static MemorySegment Info(MemorySegment struct) {
+        return struct.get(Info$LAYOUT, Info$OFFSET);
+    }
+
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * const struct OrtMemoryInfo *(*Info)(const struct OrtAllocator *)
+     * }
+     */
+    public static void Info(MemorySegment struct, MemorySegment fieldValue) {
+        struct.set(Info$LAYOUT, Info$OFFSET, fieldValue);
+    }
+
+    /**
+     * Functional interface getter for field:
+     * {@snippet lang=c :
+     * const struct OrtMemoryInfo *(*Info)(const struct OrtAllocator *)
+     * }
+     */
+    public static Info.Function InfoFunction(MemorySegment struct) {
+        return Info.function(Info(struct));
+    }
+
+    /**
+     * Obtains a slice of {@code arrayParam} which selects the array element at {@code index}.
+     * The returned segment has address {@code arrayParam.address() + index * layout().byteSize()}
+     */
+    public static MemorySegment asSlice(MemorySegment array, long index) {
+        return array.asSlice(layout().byteSize() * index);
+    }
+
+    /**
+     * The size (in bytes) of this struct
+     */
     public static long sizeof() {
-        return $LAYOUT().byteSize();
+        return layout().byteSize();
     }
 
+    /**
+     * Allocate a segment of size {@code layout().byteSize()} using {@code allocator}
+     */
     public static MemorySegment allocate(SegmentAllocator allocator) {
-        return allocator.allocate($LAYOUT());
+        return allocator.allocate(layout());
     }
 
-    public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
-        return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
+    /**
+     * Allocate an array of size {@code elementCount} using {@code allocator}.
+     * The returned segment has size {@code elementCount * layout().byteSize()}.
+     */
+    public static MemorySegment allocateArray(long elementCount, SegmentAllocator allocator) {
+        return allocator.allocate(MemoryLayout.sequenceLayout(elementCount, layout()));
     }
 
-    public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) {
-        return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session);
+    /**
+     * Reinterprets {@code addr} using target {@code arena} and {@code cleanupAction} (if any).
+     * The returned segment has size {@code layout().byteSize()}
+     */
+    public static MemorySegment reinterpret(MemorySegment addr, Arena arena, Consumer<MemorySegment> cleanup) {
+        return reinterpret(addr, 1, arena, cleanup);
+    }
+
+    /**
+     * Reinterprets {@code addr} using target {@code arena} and {@code cleanupAction} (if any).
+     * The returned segment has size {@code elementCount * layout().byteSize()}
+     */
+    public static MemorySegment reinterpret(
+            MemorySegment addr, long elementCount, Arena arena, Consumer<MemorySegment> cleanup) {
+        return addr.reinterpret(layout().byteSize() * elementCount, arena, cleanup);
     }
 }
