@@ -4,300 +4,597 @@
  */
 package com.jyuzawa.onnxruntime_extern;
 
+import static java.lang.foreign.MemoryLayout.PathElement.*;
 import static java.lang.foreign.ValueLayout.*;
 
 import java.lang.foreign.*;
-import java.lang.invoke.VarHandle;
+import java.lang.invoke.*;
+import java.util.*;
+import java.util.function.*;
+import java.util.stream.*;
 
+/**
+ * {@snippet lang=c :
+ * struct OrtROCMProviderOptions {
+ *     int device_id;
+ *     int miopen_conv_exhaustive_search;
+ *     size_t gpu_mem_limit;
+ *     int arena_extend_strategy;
+ *     int do_copy_in_default_stream;
+ *     int has_user_compute_stream;
+ *     void *user_compute_stream;
+ *     OrtArenaCfg *default_memory_arena_cfg;
+ *     int tunable_op_enable;
+ *     int tunable_op_tuning_enable;
+ *     int tunable_op_max_tuning_duration_ms;
+ * }
+ * }
+ */
 public class OrtROCMProviderOptions {
 
-    static final GroupLayout $struct$LAYOUT = MemoryLayout.structLayout(
-                    Constants$root.C_INT$LAYOUT.withName("device_id"),
-                    Constants$root.C_INT$LAYOUT.withName("miopen_conv_exhaustive_search"),
-                    Constants$root.C_LONG_LONG$LAYOUT.withName("gpu_mem_limit"),
-                    Constants$root.C_INT$LAYOUT.withName("arena_extend_strategy"),
-                    Constants$root.C_INT$LAYOUT.withName("do_copy_in_default_stream"),
-                    Constants$root.C_INT$LAYOUT.withName("has_user_compute_stream"),
-                    MemoryLayout.paddingLayout(32),
-                    Constants$root.C_POINTER$LAYOUT.withName("user_compute_stream"),
-                    Constants$root.C_POINTER$LAYOUT.withName("default_memory_arena_cfg"),
-                    Constants$root.C_INT$LAYOUT.withName("tunable_op_enable"),
-                    Constants$root.C_INT$LAYOUT.withName("tunable_op_tuning_enable"),
-                    Constants$root.C_INT$LAYOUT.withName("tunable_op_max_tuning_duration_ms"),
-                    MemoryLayout.paddingLayout(32))
+    OrtROCMProviderOptions() {
+        // Should not be called directly
+    }
+
+    private static final GroupLayout $LAYOUT = MemoryLayout.structLayout(
+                    onnxruntime_all_h.C_INT.withName("device_id"),
+                    onnxruntime_all_h.C_INT.withName("miopen_conv_exhaustive_search"),
+                    onnxruntime_all_h.C_LONG.withName("gpu_mem_limit"),
+                    onnxruntime_all_h.C_INT.withName("arena_extend_strategy"),
+                    onnxruntime_all_h.C_INT.withName("do_copy_in_default_stream"),
+                    onnxruntime_all_h.C_INT.withName("has_user_compute_stream"),
+                    MemoryLayout.paddingLayout(4),
+                    onnxruntime_all_h.C_POINTER.withName("user_compute_stream"),
+                    onnxruntime_all_h.C_POINTER.withName("default_memory_arena_cfg"),
+                    onnxruntime_all_h.C_INT.withName("tunable_op_enable"),
+                    onnxruntime_all_h.C_INT.withName("tunable_op_tuning_enable"),
+                    onnxruntime_all_h.C_INT.withName("tunable_op_max_tuning_duration_ms"),
+                    MemoryLayout.paddingLayout(4))
             .withName("OrtROCMProviderOptions");
 
-    public static MemoryLayout $LAYOUT() {
-        return OrtROCMProviderOptions.$struct$LAYOUT;
+    /**
+     * The layout of this struct
+     */
+    public static final GroupLayout layout() {
+        return $LAYOUT;
     }
 
-    static final VarHandle device_id$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("device_id"));
+    private static final OfInt device_id$LAYOUT = (OfInt) $LAYOUT.select(groupElement("device_id"));
 
-    public static VarHandle device_id$VH() {
-        return OrtROCMProviderOptions.device_id$VH;
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * int device_id
+     * }
+     */
+    public static final OfInt device_id$layout() {
+        return device_id$LAYOUT;
     }
 
-    public static int device_id$get(MemorySegment seg) {
-        return (int) OrtROCMProviderOptions.device_id$VH.get(seg);
+    private static final long device_id$OFFSET = 0;
+
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * int device_id
+     * }
+     */
+    public static final long device_id$offset() {
+        return device_id$OFFSET;
     }
 
-    public static void device_id$set(MemorySegment seg, int x) {
-        OrtROCMProviderOptions.device_id$VH.set(seg, x);
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * int device_id
+     * }
+     */
+    public static int device_id(MemorySegment struct) {
+        return struct.get(device_id$LAYOUT, device_id$OFFSET);
     }
 
-    public static int device_id$get(MemorySegment seg, long index) {
-        return (int) OrtROCMProviderOptions.device_id$VH.get(seg.asSlice(index * sizeof()));
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * int device_id
+     * }
+     */
+    public static void device_id(MemorySegment struct, int fieldValue) {
+        struct.set(device_id$LAYOUT, device_id$OFFSET, fieldValue);
     }
 
-    public static void device_id$set(MemorySegment seg, long index, int x) {
-        OrtROCMProviderOptions.device_id$VH.set(seg.asSlice(index * sizeof()), x);
+    private static final OfInt miopen_conv_exhaustive_search$LAYOUT =
+            (OfInt) $LAYOUT.select(groupElement("miopen_conv_exhaustive_search"));
+
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * int miopen_conv_exhaustive_search
+     * }
+     */
+    public static final OfInt miopen_conv_exhaustive_search$layout() {
+        return miopen_conv_exhaustive_search$LAYOUT;
     }
 
-    static final VarHandle miopen_conv_exhaustive_search$VH =
-            $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("miopen_conv_exhaustive_search"));
+    private static final long miopen_conv_exhaustive_search$OFFSET = 4;
 
-    public static VarHandle miopen_conv_exhaustive_search$VH() {
-        return OrtROCMProviderOptions.miopen_conv_exhaustive_search$VH;
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * int miopen_conv_exhaustive_search
+     * }
+     */
+    public static final long miopen_conv_exhaustive_search$offset() {
+        return miopen_conv_exhaustive_search$OFFSET;
     }
 
-    public static int miopen_conv_exhaustive_search$get(MemorySegment seg) {
-        return (int) OrtROCMProviderOptions.miopen_conv_exhaustive_search$VH.get(seg);
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * int miopen_conv_exhaustive_search
+     * }
+     */
+    public static int miopen_conv_exhaustive_search(MemorySegment struct) {
+        return struct.get(miopen_conv_exhaustive_search$LAYOUT, miopen_conv_exhaustive_search$OFFSET);
     }
 
-    public static void miopen_conv_exhaustive_search$set(MemorySegment seg, int x) {
-        OrtROCMProviderOptions.miopen_conv_exhaustive_search$VH.set(seg, x);
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * int miopen_conv_exhaustive_search
+     * }
+     */
+    public static void miopen_conv_exhaustive_search(MemorySegment struct, int fieldValue) {
+        struct.set(miopen_conv_exhaustive_search$LAYOUT, miopen_conv_exhaustive_search$OFFSET, fieldValue);
     }
 
-    public static int miopen_conv_exhaustive_search$get(MemorySegment seg, long index) {
-        return (int) OrtROCMProviderOptions.miopen_conv_exhaustive_search$VH.get(seg.asSlice(index * sizeof()));
+    private static final OfLong gpu_mem_limit$LAYOUT = (OfLong) $LAYOUT.select(groupElement("gpu_mem_limit"));
+
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * size_t gpu_mem_limit
+     * }
+     */
+    public static final OfLong gpu_mem_limit$layout() {
+        return gpu_mem_limit$LAYOUT;
     }
 
-    public static void miopen_conv_exhaustive_search$set(MemorySegment seg, long index, int x) {
-        OrtROCMProviderOptions.miopen_conv_exhaustive_search$VH.set(seg.asSlice(index * sizeof()), x);
+    private static final long gpu_mem_limit$OFFSET = 8;
+
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * size_t gpu_mem_limit
+     * }
+     */
+    public static final long gpu_mem_limit$offset() {
+        return gpu_mem_limit$OFFSET;
     }
 
-    static final VarHandle gpu_mem_limit$VH =
-            $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("gpu_mem_limit"));
-
-    public static VarHandle gpu_mem_limit$VH() {
-        return OrtROCMProviderOptions.gpu_mem_limit$VH;
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * size_t gpu_mem_limit
+     * }
+     */
+    public static long gpu_mem_limit(MemorySegment struct) {
+        return struct.get(gpu_mem_limit$LAYOUT, gpu_mem_limit$OFFSET);
     }
 
-    public static long gpu_mem_limit$get(MemorySegment seg) {
-        return (long) OrtROCMProviderOptions.gpu_mem_limit$VH.get(seg);
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * size_t gpu_mem_limit
+     * }
+     */
+    public static void gpu_mem_limit(MemorySegment struct, long fieldValue) {
+        struct.set(gpu_mem_limit$LAYOUT, gpu_mem_limit$OFFSET, fieldValue);
     }
 
-    public static void gpu_mem_limit$set(MemorySegment seg, long x) {
-        OrtROCMProviderOptions.gpu_mem_limit$VH.set(seg, x);
+    private static final OfInt arena_extend_strategy$LAYOUT =
+            (OfInt) $LAYOUT.select(groupElement("arena_extend_strategy"));
+
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * int arena_extend_strategy
+     * }
+     */
+    public static final OfInt arena_extend_strategy$layout() {
+        return arena_extend_strategy$LAYOUT;
     }
 
-    public static long gpu_mem_limit$get(MemorySegment seg, long index) {
-        return (long) OrtROCMProviderOptions.gpu_mem_limit$VH.get(seg.asSlice(index * sizeof()));
+    private static final long arena_extend_strategy$OFFSET = 16;
+
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * int arena_extend_strategy
+     * }
+     */
+    public static final long arena_extend_strategy$offset() {
+        return arena_extend_strategy$OFFSET;
     }
 
-    public static void gpu_mem_limit$set(MemorySegment seg, long index, long x) {
-        OrtROCMProviderOptions.gpu_mem_limit$VH.set(seg.asSlice(index * sizeof()), x);
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * int arena_extend_strategy
+     * }
+     */
+    public static int arena_extend_strategy(MemorySegment struct) {
+        return struct.get(arena_extend_strategy$LAYOUT, arena_extend_strategy$OFFSET);
     }
 
-    static final VarHandle arena_extend_strategy$VH =
-            $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("arena_extend_strategy"));
-
-    public static VarHandle arena_extend_strategy$VH() {
-        return OrtROCMProviderOptions.arena_extend_strategy$VH;
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * int arena_extend_strategy
+     * }
+     */
+    public static void arena_extend_strategy(MemorySegment struct, int fieldValue) {
+        struct.set(arena_extend_strategy$LAYOUT, arena_extend_strategy$OFFSET, fieldValue);
     }
 
-    public static int arena_extend_strategy$get(MemorySegment seg) {
-        return (int) OrtROCMProviderOptions.arena_extend_strategy$VH.get(seg);
+    private static final OfInt do_copy_in_default_stream$LAYOUT =
+            (OfInt) $LAYOUT.select(groupElement("do_copy_in_default_stream"));
+
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * int do_copy_in_default_stream
+     * }
+     */
+    public static final OfInt do_copy_in_default_stream$layout() {
+        return do_copy_in_default_stream$LAYOUT;
     }
 
-    public static void arena_extend_strategy$set(MemorySegment seg, int x) {
-        OrtROCMProviderOptions.arena_extend_strategy$VH.set(seg, x);
+    private static final long do_copy_in_default_stream$OFFSET = 20;
+
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * int do_copy_in_default_stream
+     * }
+     */
+    public static final long do_copy_in_default_stream$offset() {
+        return do_copy_in_default_stream$OFFSET;
     }
 
-    public static int arena_extend_strategy$get(MemorySegment seg, long index) {
-        return (int) OrtROCMProviderOptions.arena_extend_strategy$VH.get(seg.asSlice(index * sizeof()));
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * int do_copy_in_default_stream
+     * }
+     */
+    public static int do_copy_in_default_stream(MemorySegment struct) {
+        return struct.get(do_copy_in_default_stream$LAYOUT, do_copy_in_default_stream$OFFSET);
     }
 
-    public static void arena_extend_strategy$set(MemorySegment seg, long index, int x) {
-        OrtROCMProviderOptions.arena_extend_strategy$VH.set(seg.asSlice(index * sizeof()), x);
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * int do_copy_in_default_stream
+     * }
+     */
+    public static void do_copy_in_default_stream(MemorySegment struct, int fieldValue) {
+        struct.set(do_copy_in_default_stream$LAYOUT, do_copy_in_default_stream$OFFSET, fieldValue);
     }
 
-    static final VarHandle do_copy_in_default_stream$VH =
-            $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("do_copy_in_default_stream"));
+    private static final OfInt has_user_compute_stream$LAYOUT =
+            (OfInt) $LAYOUT.select(groupElement("has_user_compute_stream"));
 
-    public static VarHandle do_copy_in_default_stream$VH() {
-        return OrtROCMProviderOptions.do_copy_in_default_stream$VH;
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * int has_user_compute_stream
+     * }
+     */
+    public static final OfInt has_user_compute_stream$layout() {
+        return has_user_compute_stream$LAYOUT;
     }
 
-    public static int do_copy_in_default_stream$get(MemorySegment seg) {
-        return (int) OrtROCMProviderOptions.do_copy_in_default_stream$VH.get(seg);
+    private static final long has_user_compute_stream$OFFSET = 24;
+
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * int has_user_compute_stream
+     * }
+     */
+    public static final long has_user_compute_stream$offset() {
+        return has_user_compute_stream$OFFSET;
     }
 
-    public static void do_copy_in_default_stream$set(MemorySegment seg, int x) {
-        OrtROCMProviderOptions.do_copy_in_default_stream$VH.set(seg, x);
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * int has_user_compute_stream
+     * }
+     */
+    public static int has_user_compute_stream(MemorySegment struct) {
+        return struct.get(has_user_compute_stream$LAYOUT, has_user_compute_stream$OFFSET);
     }
 
-    public static int do_copy_in_default_stream$get(MemorySegment seg, long index) {
-        return (int) OrtROCMProviderOptions.do_copy_in_default_stream$VH.get(seg.asSlice(index * sizeof()));
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * int has_user_compute_stream
+     * }
+     */
+    public static void has_user_compute_stream(MemorySegment struct, int fieldValue) {
+        struct.set(has_user_compute_stream$LAYOUT, has_user_compute_stream$OFFSET, fieldValue);
     }
 
-    public static void do_copy_in_default_stream$set(MemorySegment seg, long index, int x) {
-        OrtROCMProviderOptions.do_copy_in_default_stream$VH.set(seg.asSlice(index * sizeof()), x);
+    private static final AddressLayout user_compute_stream$LAYOUT =
+            (AddressLayout) $LAYOUT.select(groupElement("user_compute_stream"));
+
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * void *user_compute_stream
+     * }
+     */
+    public static final AddressLayout user_compute_stream$layout() {
+        return user_compute_stream$LAYOUT;
     }
 
-    static final VarHandle has_user_compute_stream$VH =
-            $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("has_user_compute_stream"));
+    private static final long user_compute_stream$OFFSET = 32;
 
-    public static VarHandle has_user_compute_stream$VH() {
-        return OrtROCMProviderOptions.has_user_compute_stream$VH;
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * void *user_compute_stream
+     * }
+     */
+    public static final long user_compute_stream$offset() {
+        return user_compute_stream$OFFSET;
     }
 
-    public static int has_user_compute_stream$get(MemorySegment seg) {
-        return (int) OrtROCMProviderOptions.has_user_compute_stream$VH.get(seg);
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * void *user_compute_stream
+     * }
+     */
+    public static MemorySegment user_compute_stream(MemorySegment struct) {
+        return struct.get(user_compute_stream$LAYOUT, user_compute_stream$OFFSET);
     }
 
-    public static void has_user_compute_stream$set(MemorySegment seg, int x) {
-        OrtROCMProviderOptions.has_user_compute_stream$VH.set(seg, x);
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * void *user_compute_stream
+     * }
+     */
+    public static void user_compute_stream(MemorySegment struct, MemorySegment fieldValue) {
+        struct.set(user_compute_stream$LAYOUT, user_compute_stream$OFFSET, fieldValue);
     }
 
-    public static int has_user_compute_stream$get(MemorySegment seg, long index) {
-        return (int) OrtROCMProviderOptions.has_user_compute_stream$VH.get(seg.asSlice(index * sizeof()));
+    private static final AddressLayout default_memory_arena_cfg$LAYOUT =
+            (AddressLayout) $LAYOUT.select(groupElement("default_memory_arena_cfg"));
+
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * OrtArenaCfg *default_memory_arena_cfg
+     * }
+     */
+    public static final AddressLayout default_memory_arena_cfg$layout() {
+        return default_memory_arena_cfg$LAYOUT;
     }
 
-    public static void has_user_compute_stream$set(MemorySegment seg, long index, int x) {
-        OrtROCMProviderOptions.has_user_compute_stream$VH.set(seg.asSlice(index * sizeof()), x);
+    private static final long default_memory_arena_cfg$OFFSET = 40;
+
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * OrtArenaCfg *default_memory_arena_cfg
+     * }
+     */
+    public static final long default_memory_arena_cfg$offset() {
+        return default_memory_arena_cfg$OFFSET;
     }
 
-    static final VarHandle user_compute_stream$VH =
-            $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("user_compute_stream"));
-
-    public static VarHandle user_compute_stream$VH() {
-        return OrtROCMProviderOptions.user_compute_stream$VH;
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * OrtArenaCfg *default_memory_arena_cfg
+     * }
+     */
+    public static MemorySegment default_memory_arena_cfg(MemorySegment struct) {
+        return struct.get(default_memory_arena_cfg$LAYOUT, default_memory_arena_cfg$OFFSET);
     }
 
-    public static MemoryAddress user_compute_stream$get(MemorySegment seg) {
-        return (java.lang.foreign.MemoryAddress) OrtROCMProviderOptions.user_compute_stream$VH.get(seg);
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * OrtArenaCfg *default_memory_arena_cfg
+     * }
+     */
+    public static void default_memory_arena_cfg(MemorySegment struct, MemorySegment fieldValue) {
+        struct.set(default_memory_arena_cfg$LAYOUT, default_memory_arena_cfg$OFFSET, fieldValue);
     }
 
-    public static void user_compute_stream$set(MemorySegment seg, MemoryAddress x) {
-        OrtROCMProviderOptions.user_compute_stream$VH.set(seg, x);
+    private static final OfInt tunable_op_enable$LAYOUT = (OfInt) $LAYOUT.select(groupElement("tunable_op_enable"));
+
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * int tunable_op_enable
+     * }
+     */
+    public static final OfInt tunable_op_enable$layout() {
+        return tunable_op_enable$LAYOUT;
     }
 
-    public static MemoryAddress user_compute_stream$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemoryAddress)
-                OrtROCMProviderOptions.user_compute_stream$VH.get(seg.asSlice(index * sizeof()));
+    private static final long tunable_op_enable$OFFSET = 48;
+
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * int tunable_op_enable
+     * }
+     */
+    public static final long tunable_op_enable$offset() {
+        return tunable_op_enable$OFFSET;
     }
 
-    public static void user_compute_stream$set(MemorySegment seg, long index, MemoryAddress x) {
-        OrtROCMProviderOptions.user_compute_stream$VH.set(seg.asSlice(index * sizeof()), x);
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * int tunable_op_enable
+     * }
+     */
+    public static int tunable_op_enable(MemorySegment struct) {
+        return struct.get(tunable_op_enable$LAYOUT, tunable_op_enable$OFFSET);
     }
 
-    static final VarHandle default_memory_arena_cfg$VH =
-            $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("default_memory_arena_cfg"));
-
-    public static VarHandle default_memory_arena_cfg$VH() {
-        return OrtROCMProviderOptions.default_memory_arena_cfg$VH;
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * int tunable_op_enable
+     * }
+     */
+    public static void tunable_op_enable(MemorySegment struct, int fieldValue) {
+        struct.set(tunable_op_enable$LAYOUT, tunable_op_enable$OFFSET, fieldValue);
     }
 
-    public static MemoryAddress default_memory_arena_cfg$get(MemorySegment seg) {
-        return (java.lang.foreign.MemoryAddress) OrtROCMProviderOptions.default_memory_arena_cfg$VH.get(seg);
+    private static final OfInt tunable_op_tuning_enable$LAYOUT =
+            (OfInt) $LAYOUT.select(groupElement("tunable_op_tuning_enable"));
+
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * int tunable_op_tuning_enable
+     * }
+     */
+    public static final OfInt tunable_op_tuning_enable$layout() {
+        return tunable_op_tuning_enable$LAYOUT;
     }
 
-    public static void default_memory_arena_cfg$set(MemorySegment seg, MemoryAddress x) {
-        OrtROCMProviderOptions.default_memory_arena_cfg$VH.set(seg, x);
+    private static final long tunable_op_tuning_enable$OFFSET = 52;
+
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * int tunable_op_tuning_enable
+     * }
+     */
+    public static final long tunable_op_tuning_enable$offset() {
+        return tunable_op_tuning_enable$OFFSET;
     }
 
-    public static MemoryAddress default_memory_arena_cfg$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemoryAddress)
-                OrtROCMProviderOptions.default_memory_arena_cfg$VH.get(seg.asSlice(index * sizeof()));
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * int tunable_op_tuning_enable
+     * }
+     */
+    public static int tunable_op_tuning_enable(MemorySegment struct) {
+        return struct.get(tunable_op_tuning_enable$LAYOUT, tunable_op_tuning_enable$OFFSET);
     }
 
-    public static void default_memory_arena_cfg$set(MemorySegment seg, long index, MemoryAddress x) {
-        OrtROCMProviderOptions.default_memory_arena_cfg$VH.set(seg.asSlice(index * sizeof()), x);
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * int tunable_op_tuning_enable
+     * }
+     */
+    public static void tunable_op_tuning_enable(MemorySegment struct, int fieldValue) {
+        struct.set(tunable_op_tuning_enable$LAYOUT, tunable_op_tuning_enable$OFFSET, fieldValue);
     }
 
-    static final VarHandle tunable_op_enable$VH =
-            $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("tunable_op_enable"));
+    private static final OfInt tunable_op_max_tuning_duration_ms$LAYOUT =
+            (OfInt) $LAYOUT.select(groupElement("tunable_op_max_tuning_duration_ms"));
 
-    public static VarHandle tunable_op_enable$VH() {
-        return OrtROCMProviderOptions.tunable_op_enable$VH;
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * int tunable_op_max_tuning_duration_ms
+     * }
+     */
+    public static final OfInt tunable_op_max_tuning_duration_ms$layout() {
+        return tunable_op_max_tuning_duration_ms$LAYOUT;
     }
 
-    public static int tunable_op_enable$get(MemorySegment seg) {
-        return (int) OrtROCMProviderOptions.tunable_op_enable$VH.get(seg);
+    private static final long tunable_op_max_tuning_duration_ms$OFFSET = 56;
+
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * int tunable_op_max_tuning_duration_ms
+     * }
+     */
+    public static final long tunable_op_max_tuning_duration_ms$offset() {
+        return tunable_op_max_tuning_duration_ms$OFFSET;
     }
 
-    public static void tunable_op_enable$set(MemorySegment seg, int x) {
-        OrtROCMProviderOptions.tunable_op_enable$VH.set(seg, x);
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * int tunable_op_max_tuning_duration_ms
+     * }
+     */
+    public static int tunable_op_max_tuning_duration_ms(MemorySegment struct) {
+        return struct.get(tunable_op_max_tuning_duration_ms$LAYOUT, tunable_op_max_tuning_duration_ms$OFFSET);
     }
 
-    public static int tunable_op_enable$get(MemorySegment seg, long index) {
-        return (int) OrtROCMProviderOptions.tunable_op_enable$VH.get(seg.asSlice(index * sizeof()));
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * int tunable_op_max_tuning_duration_ms
+     * }
+     */
+    public static void tunable_op_max_tuning_duration_ms(MemorySegment struct, int fieldValue) {
+        struct.set(tunable_op_max_tuning_duration_ms$LAYOUT, tunable_op_max_tuning_duration_ms$OFFSET, fieldValue);
     }
 
-    public static void tunable_op_enable$set(MemorySegment seg, long index, int x) {
-        OrtROCMProviderOptions.tunable_op_enable$VH.set(seg.asSlice(index * sizeof()), x);
+    /**
+     * Obtains a slice of {@code arrayParam} which selects the array element at {@code index}.
+     * The returned segment has address {@code arrayParam.address() + index * layout().byteSize()}
+     */
+    public static MemorySegment asSlice(MemorySegment array, long index) {
+        return array.asSlice(layout().byteSize() * index);
     }
 
-    static final VarHandle tunable_op_tuning_enable$VH =
-            $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("tunable_op_tuning_enable"));
-
-    public static VarHandle tunable_op_tuning_enable$VH() {
-        return OrtROCMProviderOptions.tunable_op_tuning_enable$VH;
-    }
-
-    public static int tunable_op_tuning_enable$get(MemorySegment seg) {
-        return (int) OrtROCMProviderOptions.tunable_op_tuning_enable$VH.get(seg);
-    }
-
-    public static void tunable_op_tuning_enable$set(MemorySegment seg, int x) {
-        OrtROCMProviderOptions.tunable_op_tuning_enable$VH.set(seg, x);
-    }
-
-    public static int tunable_op_tuning_enable$get(MemorySegment seg, long index) {
-        return (int) OrtROCMProviderOptions.tunable_op_tuning_enable$VH.get(seg.asSlice(index * sizeof()));
-    }
-
-    public static void tunable_op_tuning_enable$set(MemorySegment seg, long index, int x) {
-        OrtROCMProviderOptions.tunable_op_tuning_enable$VH.set(seg.asSlice(index * sizeof()), x);
-    }
-
-    static final VarHandle tunable_op_max_tuning_duration_ms$VH =
-            $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("tunable_op_max_tuning_duration_ms"));
-
-    public static VarHandle tunable_op_max_tuning_duration_ms$VH() {
-        return OrtROCMProviderOptions.tunable_op_max_tuning_duration_ms$VH;
-    }
-
-    public static int tunable_op_max_tuning_duration_ms$get(MemorySegment seg) {
-        return (int) OrtROCMProviderOptions.tunable_op_max_tuning_duration_ms$VH.get(seg);
-    }
-
-    public static void tunable_op_max_tuning_duration_ms$set(MemorySegment seg, int x) {
-        OrtROCMProviderOptions.tunable_op_max_tuning_duration_ms$VH.set(seg, x);
-    }
-
-    public static int tunable_op_max_tuning_duration_ms$get(MemorySegment seg, long index) {
-        return (int) OrtROCMProviderOptions.tunable_op_max_tuning_duration_ms$VH.get(seg.asSlice(index * sizeof()));
-    }
-
-    public static void tunable_op_max_tuning_duration_ms$set(MemorySegment seg, long index, int x) {
-        OrtROCMProviderOptions.tunable_op_max_tuning_duration_ms$VH.set(seg.asSlice(index * sizeof()), x);
-    }
-
+    /**
+     * The size (in bytes) of this struct
+     */
     public static long sizeof() {
-        return $LAYOUT().byteSize();
+        return layout().byteSize();
     }
 
+    /**
+     * Allocate a segment of size {@code layout().byteSize()} using {@code allocator}
+     */
     public static MemorySegment allocate(SegmentAllocator allocator) {
-        return allocator.allocate($LAYOUT());
+        return allocator.allocate(layout());
     }
 
-    public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
-        return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
+    /**
+     * Allocate an array of size {@code elementCount} using {@code allocator}.
+     * The returned segment has size {@code elementCount * layout().byteSize()}.
+     */
+    public static MemorySegment allocateArray(long elementCount, SegmentAllocator allocator) {
+        return allocator.allocate(MemoryLayout.sequenceLayout(elementCount, layout()));
     }
 
-    public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) {
-        return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session);
+    /**
+     * Reinterprets {@code addr} using target {@code arena} and {@code cleanupAction} (if any).
+     * The returned segment has size {@code layout().byteSize()}
+     */
+    public static MemorySegment reinterpret(MemorySegment addr, Arena arena, Consumer<MemorySegment> cleanup) {
+        return reinterpret(addr, 1, arena, cleanup);
+    }
+
+    /**
+     * Reinterprets {@code addr} using target {@code arena} and {@code cleanupAction} (if any).
+     * The returned segment has size {@code elementCount * layout().byteSize()}
+     */
+    public static MemorySegment reinterpret(
+            MemorySegment addr, long elementCount, Arena arena, Consumer<MemorySegment> cleanup) {
+        return addr.reinterpret(layout().byteSize() * elementCount, arena, cleanup);
     }
 }
